The lab 1 is complete, v2.0!

--- a/TeddyClient/settings.ini
+++ b/TeddyClient/settings.ini
@@ -1,6 +1,6 @@
 [General]
-geometry=@Rect(375 271 538 480)
+geometry=@Rect(1202 195 538 331)
 ip=127.0.0.1
 port=45678
-status=2
-username=Hermj3
+status=1
+username=Ilya
