--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,6 +1,7 @@
 [General]
-geometry=@Rect(367 330 538 331)
-ip=127.0.0.12
-port=2075
-status=2
-username=BulgachiMuchi
+customStatus=Pidor
+geometry=@Rect(262 159 538 331)
+ip=127.0.1.1
+port=45678
+status=3
+username=Bulgach
