Reload option added, clear Message Field option added! V 2.4

--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,7 +1,7 @@
 [General]
-customStatus=Pidor
-geometry=@Rect(262 159 538 331)
+customStatus=
+geometry=@Rect(288 184 538 331)
 ip=127.0.1.1
 port=45678
 status=3
-username=Bulgach
+username=Bulgachu
