The release is coming! Images update v2.8

--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,7 +1,8 @@
 [General]
-customStatus=
-geometry=@Rect(288 184 538 331)
+avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client.png
+customStatus=Asleep
+geometry=@Rect(296 427 657 347)
 ip=127.0.1.1
 port=45678
 status=3
-username=Bulgachu
+username=Ilya
