--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,8 +1,8 @@
 [General]
-avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client.png
+avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client2.png
 customStatus=Asleep
-geometry=@Rect(296 427 657 347)
+geometry=@Rect(398 502 657 351)
 ip=127.0.1.1
 port=45678
 status=3
-username=Ilya
+username=Ilyasik
