Big update! Colors, Server options added, improve validation system, v3.75

--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,8 +1,14 @@
 [General]
-avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client2.png
-customStatus=Asleep
-geometry=@Rect(398 502 657 351)
+avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client.png
+backgroundColor=#aaffff
+clientMsgColor=#ffaa7f
+clientProfileColor=#9f98ff
+customStatus=Cool
+geometry=@Rect(920 284 723 433)
 ip=127.0.1.1
+otherMsgColor=#5555ff
 port=45678
-status=3
+showModeIP=1
+showModeTime=1
+status=2
 username=Ilyasik
