--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,14 +1,15 @@
 [General]
-avatarPath=/home/kataich75/qtprojects/TECH/TeddyClient/other/client.png
-backgroundColor=#aaffff
-clientMsgColor=#ffaa7f
-clientProfileColor=#9f98ff
-customStatus=Cool
-geometry=@Rect(1036 407 723 477)
-ip=127.0.1.1
-otherMsgColor=#5555ff
+avatarPath=:/new/prefix1/other/client2.png
+backgroundColor=#00ffff
+clientMsgColor=#00ffff
+clientProfileColor=darkCyan
+customStatus=For HONOR!
+fileAutoSave=1
+geometry=@Rect(1212 104 700 450)
+ip=127.0.0.1
+otherMsgColor=#008b8b
 port=45678
 showModeIP=1
 showModeTime=1
-status=2
-username=Ilyasik
+status=3
+username=Boris Britva
