--- a/TeddyClient/other/settings.ini
+++ b/TeddyClient/other/settings.ini
@@ -1,15 +1,16 @@
 [General]
-avatarPath=:/new/prefix1/other/client2.png
-backgroundColor=#00ffff
-clientMsgColor=#00ffff
-clientProfileColor=darkCyan
-customStatus=For HONOR!
+avatarPath=:/new/prefix1/other/creator.png
+backgroundColor=#808080
+clientMsgColor=#000000
+clientProfileColor=white
+customStatus=INCREDYBILIS!
 fileAutoSave=1
-geometry=@Rect(1212 104 700 450)
+geometry=@Rect(93 238 700 450)
 ip=127.0.0.1
-otherMsgColor=#008b8b
+otherMsgColor=#0000ff
 port=45678
+showLoadBar=1
 showModeIP=1
 showModeTime=1
 status=3
-username=Boris Britva
+username=Ilya the CREATOR
